--- a/src/notifications/telegram_config_local.json
+++ b/src/notifications/telegram_config_local.json
@@ -1,8 +1,8 @@
 {
   "app": {
     "bot": {
-      "token": "5219019166:AAG1XKXJOBud9jTva0f2WaAn0v4jvjlw0bo",
-      "chat": "-447826403",
+      "token": "5219 ",
+      "chat": "-447 ",
       "replyTo": ""
     },
     "base": {
